fix blog cover overflow

--- a/resources/sass/pages/_blog.scss
+++ b/resources/sass/pages/_blog.scss
@@ -2,7 +2,7 @@
   margin-top: 100px;
   img {
     height: 100px;
-    width: 100vw;
+    width: 100%;
     object-fit: cover;
     object-position: center;
   }
